Closed
Bug 1663279
Opened 5 years ago
Closed 5 years ago
Titlebar setup misconfiguration
Categories
(Core :: Widget: Gtk, defect, P2)
Tracking
()
RESOLVED
FIXED
82 Branch
| Tracking | Status | |
|---|---|---|
| firefox-esr68 | --- | unaffected |
| firefox-esr78 | --- | unaffected |
| firefox80 | --- | unaffected |
| firefox81 | --- | unaffected |
| firefox82 | --- | fixed |
People
(Reporter: mathew.hodson, Assigned: stransky)
References
(Blocks 1 open bug, Regression)
Details
(Keywords: regression)
Attachments
(1 file, 1 obsolete file)
Bug 1460959 now hides the title bar by default in more environments, but the new code ignores the level of support defined in GetSystemCSDSupportLevel().
| Reporter | ||
Comment 1•5 years ago
|
||
The if statement should be added back in HideTitlebarByDefault() at https://searchfox.org/mozilla-central/rev/dc30fc92f2d02abe716426df7eff0f0bbb907da2/widget/gtk/nsWindow.cpp#7848
if (hideTitlebar) {
GdkScreen* screen;
hideTitlebar = ((screen = gdk_screen_get_default()) &&
gdk_screen_is_composited(screen)) ||
TitlebarCanUseShapeMask();
}
Regressed by: 1460959
Updated•5 years ago
|
Has Regression Range: --- → yes
| Reporter | ||
Comment 2•5 years ago
|
||
You should be able to test by setting env MOZ_GTK_TITLEBAR_DECORATION to none.
Expected:
Title bar is hidden by default.
Actual:
Title bar is shown by default.
OS: Unspecified → Linux
Hardware: Unspecified → Desktop
Version: unspecified → Firefox 82
| Assignee | ||
Comment 3•5 years ago
|
||
Ahh, you're right! Thanks a lot.
Assignee: nobody → stransky
Blocks: gtktitlebar
| Assignee | ||
Comment 4•5 years ago
|
||
Updated•5 years ago
|
Attachment #9174095 -
Attachment is obsolete: true
| Assignee | ||
Updated•5 years ago
|
Summary: HideTitlebarByDefault() ignores GetSystemCSDSupportLevel() → Titlebar setup misconfiguration
| Assignee | ||
Updated•5 years ago
|
Priority: -- → P2
| Assignee | ||
Comment 5•5 years ago
|
||
- Use toplevel transparent window by default.
- Use Client decoration for Deepin desktop.
- Hide system titlebar by default on latest KDE versions.
- Hide system titlebar by default on Gnome/Pantheon.
Pushed by rmaries@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/c500459f5539
[Linux] Update default titlebar configration, r=jhorak
Comment 7•5 years ago
|
||
Set release status flags based on info from the regressing bug 1460959
status-firefox80:
--- → unaffected
status-firefox81:
--- → unaffected
status-firefox82:
--- → affected
status-firefox-esr68:
--- → unaffected
status-firefox-esr78:
--- → unaffected
Comment 8•5 years ago
|
||
| bugherder | ||
Status: UNCONFIRMED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → 82 Branch
Updated•5 years ago
|
Keywords: regression
You need to log in
before you can comment on or make changes to this bug.
Description
•