Bug 1663279 [Linux] Update default titlebar configration, r=jhorak

- Use toplevel transparent window by default.
- Use Client decoration for Deepin desktop.
- Hide system titlebar by default on latest KDE versions.
- Hide system titlebar by default on Gnome/Pantheon.

Differential Revision: https://phabricator.services.mozilla.com/D89363